optimal parameter added

--- a/results/P013T/20240305_P013T_B005_cropped_isotropic_Nuclei_config.yaml
+++ b/results/P013T/20240305_P013T_B005_cropped_isotropic_Nuclei_config.yaml
@@ -8,16 +8,16 @@ flow_threshold: 0.5
 interp: false
 invert: false
 max_size_fraction: 0.5
-min_size: 3000
+min_size: 2500
 model_name: cyto3
 niter: 100
-norm3D: false
+norm3D: true
 normalize: true
-percentile_max: 99.0
+percentile_max: 99.9
 percentile_min: 0.0
 sharpen_radius: 0.0
 smooth_radius: 1.0
-stitch_threshold: 0.0
+stitch_threshold: 0.75
 tile_norm_blocksize: 0
 tile_norm_smooth3D: 1
 tile_overlap: 0.0
