--- a/configs/best_organoid_3d_nuclei_study_config.json
+++ b/configs/best_organoid_3d_nuclei_study_config.json
@@ -1,25 +1,25 @@
 {
-  "cellprob_threshold": 5.0,
-  "channel_axis": 1,
-  "channel_to_segment": 0,
-  "diameter": 30.0,
-  "do_3D": true,
-  "flow_threshold": 0.5,
-  "invert": false,
-  "max_size_fraction": 0.5,
-  "min_size": 5000,
-  "model_name": "cpsam",
-  "niter": 100,
-  "norm3D": true,
-  "normalize": true,
-  "percentile_max": 99.0,
-  "percentile_min": 0.1,
-  "sharpen_radius": 0.0,
-  "smooth_radius": 1.0,
-  "stitch_threshold": 0.75,
-  "tile": true,
-  "tile_norm_blocksize": 0,
-  "tile_norm_smooth3D": 1,
-  "tile_overlap": 0.1,
-  "z_axis": 0
+    "model_name": "cpsam",
+    "diameter": 42.53785095737977,
+    "channel_to_segment": 0,
+    "invert": false,
+    "normalize": false,
+    "norm3D": false,
+    "percentile_min": 1.0,
+    "percentile_max": 99.0,
+    "sharpen_radius": 0.0,
+    "smooth_radius": 0.0,
+    "do_3D": true,
+    "flow_threshold": 0.7704285838459498,
+    "cellprob_threshold": 2.3919636508684308,
+    "min_size": 10400,
+    "max_size_fraction": 2.0,
+    "niter": 162,
+    "tile": false,
+    "tile_overlap": 0.1,
+    "stitch_threshold": 0.5779972601681014,
+    "tile_norm_blocksize": 0,
+    "tile_norm_smooth3D": 0,
+    "channel_axis": 1,
+    "z_axis": 3
 }
