fix: update configuration parameters for 3D nuclei study

--- a/configs/best_organoid_3d_nuclei_study_config.json
+++ b/configs/best_organoid_3d_nuclei_study_config.json
@@ -1,25 +1,25 @@
 {
     "model_name": "cpsam",
-    "diameter": 42.53785095737977,
+    "diameter": 30.0,
     "channel_to_segment": 0,
     "invert": false,
-    "normalize": false,
-    "norm3D": false,
-    "percentile_min": 1.0,
+    "normalize": true,
+    "norm3D": true,
+    "percentile_min": 0.1,
     "percentile_max": 99.0,
     "sharpen_radius": 0.0,
-    "smooth_radius": 0.0,
+    "smooth_radius": 1.0,
     "do_3D": true,
-    "flow_threshold": 0.7704285838459498,
-    "cellprob_threshold": 2.3919636508684308,
-    "min_size": 10400,
-    "max_size_fraction": 2.0,
-    "niter": 162,
-    "tile": false,
+    "flow_threshold": 0.5,
+    "cellprob_threshold": 5.0,
+    "min_size": 5000,
+    "max_size_fraction": 0.5,
+    "niter": 100,
+    "tile": true,
     "tile_overlap": 0.1,
-    "stitch_threshold": 0.5779972601681014,
+    "stitch_threshold": 0.75,
     "tile_norm_blocksize": 0,
-    "tile_norm_smooth3D": 0,
+    "tile_norm_smooth3D": 1,
     "channel_axis": 1,
-    "z_axis": 3
+    "z_axis": 0
 }
