--- a/configs/manual_organoid_3d_nuclei_study_config.json
+++ b/configs/manual_organoid_3d_nuclei_study_config.json
@@ -1,22 +1,22 @@
 {
-  "cellprob_threshold": 5.0,
+  "cellprob_threshold": -0.69,
   "channel_axis": 1,
   "channel_to_segment": 0,
-  "diameter": 30.0,
+  "diameter": null,
   "do_3D": true,
-  "flow_threshold": 0.5,
+  "flow_threshold": 0.27,
   "invert": false,
   "max_size_fraction": 0.5,
-  "min_size": 5000,
+  "min_size": 3604,
   "model_name": "cpsam",
   "niter": 100,
   "norm3D": true,
   "normalize": true,
-  "percentile_max": 99.0,
-  "percentile_min": 0.1,
-  "sharpen_radius": 0.0,
-  "smooth_radius": 1.0,
-  "stitch_threshold": 0.75,
+  "percentile_max": 0.97,
+  "percentile_min": 0.067,
+  "sharpen_radius": 0.40,
+  "smooth_radius": 3.57,
+  "stitch_threshold": 0.67,
   "tile": true,
   "tile_norm_blocksize": 0,
   "tile_norm_smooth3D": 1,
