--- a/configs/best_organoid_3d_nuclei_20231108_config.json
+++ b/configs/best_organoid_3d_nuclei_20231108_config.json
@@ -15,7 +15,7 @@
     "min_size": 10155,
     "max_size_fraction": 0.5,
     "niter": 100,
-    "tile": true,
+    "tile": false,
     "tile_overlap": 0.1,
     "stitch_threshold": 0.5133596876465747,
     "tile_norm_blocksize": 0,
